--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,11 @@
          location permissions for the 'MyLocation' functionality. 
     -->
     <uses-permission
-        android:name="android.permission.ACCESS_FINE_LOCATION" />
-
+        android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- 精确位置服务 -->
     <uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+        android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!-- 写sd 卡 google地图会往sd卡上写缓存数据-->
 
     <uses-feature
         android:glEsVersion="0x00020000"
