--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission
         android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- 精确位置服务 -->
     <uses-permission
-        android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+        android:name="android.permission.ACCESS_COARSE_LOCATION"/> <!-- 位置服务 -->
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!-- 写sd 卡 google地图会往sd卡上写缓存数据-->
 
